refactor(pump): Implement function-level execution planner
This major refactoring overhauls the `pump` command's core logic to be more robust, predictable, and granular. The previous implementation operated on a file-level atomic basis, which led to fragile state management and prevented fine-grained operations.

The new implementation introduces a `FunctionExecutionPlan` as a central IR, decoupling the four phases of the pump process: Analysis, Decision, Planning, and Execution.

Key Changes:

- **Truth Table Driven Planner**: A new `_generate_execution_plan` method now deterministically generates a function-level execution plan based on user decisions (e.g., overwrite, keep existing) and flags (`--strip`). Its behavior is locked down by precise unit tests.

- **Robust Fingerprint Management**: The execution phase now correctly and independently updates code and documentation fingerprints based on the plan. This resolves a critical bug where `pump` could corrupt the code signature baseline, causing `check` to miss signature drifts.

- **Function-Level Strip**: The transformer's `strip` method now accepts a `whitelist` of FQNs, enabling granular docstring removal as dictated by the execution plan.

- **TDD-Driven Refactoring**: Obsolete, brittle integration tests for `pump` were replaced with focused unit tests for the execution planner (`test_execution_planner.py`), ensuring the core business logic is rigorously verified.

s

s

--- a/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
+++ b/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
@@ -70,6 +70,8 @@
   The name of the function.
 "FunctionDef.return_annotation": |-
   The return type annotation of the function.
+"FunctionExecutionPlan": |-
+  定义对单个 FQN 的最终执行操作。
 "ModuleDef": |-
   Represents a parsed Python module (a single .py file).
 "ModuleDef.attributes": |-
@@ -84,6 +86,8 @@
   The relative path to the module file.
 "ModuleDef.functions": |-
   A list of functions defined at the module level.
+"ModuleDef.get_all_fqns": |-
+  返回模块中所有可文档化实体的 FQN 列表。
 "ModuleDef.get_undocumented_public_keys": |-
   Returns a list of public keys (FQNs) that do not have a docstring.
 "ModuleDef.imports": |-
