Capture: M pyproject.toml, M uv.lock
X-Quipu-Output-Tree: f85386eab37cb237d2f1d9430174e1c0da9012ea

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "stitcher-cli",
     "stitcher-application",
     "stitcher-test-utils",
+    "stitcher-refactor",
 ]
 
 [tool.uv.workspace]
