feat(refactor, cli): Implement Migration Spec API and CLI Command
This completes Phase 4 of the refactor engine implementation.

Key changes:
1.  **Migration Spec API**: Implements `MigrationSpec` to containerize refactor operations (`Rename`, `Move`, `MoveDir`).
2.  **Pipeline**: Implements `MigrationLoader` (for parsing Python migration scripts) and `Planner` (for transforming high-level operations into low-level `FileOp` lists).
3.  **CLI**: Adds the `stitcher refactor apply <script>` command, which orchestrates the entire process, including full semantic graph loading, planning, interactive preview, and transactional commit via `TransactionManager`.
4.  **Fix**: Corrects the dependency issue in `stitcher-cli` by adopting the `tomllib` standard library import (with fallback to `tomli`) and explicitly declaring `tomli` as a conditional dependency in `pyproject.toml`.

This feature provides the first user-facing interface for the powerful transactional refactoring engine.

--- a/packages/stitcher-cli/pyproject.toml
+++ b/packages/stitcher-cli/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "stitcher-python-adapter",
     "pyneedle",
     "typer",
+    "tomli; python_version < '3.11'",
 ]
 
 [project.scripts]
