Capture: M __init__.stitcher.yaml, M test_message_bus.stitcher.yaml
X-Quipu-Output-Tree: 980e928d9fdb70ed530bc84bc4aa7e498a4469fc

--- a/snapshot/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
+++ b/snapshot/packages/stitcher-common/src/stitcher/common/__init__.stitcher.yaml
@@ -1,5 +1,5 @@
 "bus": |-
-  The global singleton MessageBus instance.
+  The global singleton FeedbackBus instance.
 "get_current_renderer": |-
   Returns the OverlayOperator for the current configured language.
   This implements the 'Lazy Pipeline Construction' pattern.
