--- a/snapshot/packages/stitcher-common/tests/unit/test_message_bus.stitcher.yaml
+++ b/snapshot/packages/stitcher-common/tests/unit/test_message_bus.stitcher.yaml
@@ -3,7 +3,7 @@
 "MockRenderer.render": |-
   Captures a message for later inspection.
 "test_bus_does_not_fail_without_renderer": |-
-  Tests that the MessageBus operates without crashing when no renderer is set.
+  Tests that the FeedbackBus operates without crashing when no renderer is set.
 "test_bus_forwards_to_renderer": |-
   Tests that the bus correctly resolves a message ID and forwards the formatted string to the renderer.
 "test_bus_identity_fallback": |-
