--- a/snapshot/packages/stitcher-refactor/src/stitcher/refactor/operations/base.stitcher.yaml
+++ b/snapshot/packages/stitcher-refactor/src/stitcher/refactor/operations/base.stitcher.yaml
@@ -1,3 +1,3 @@
-"AbstractOperation.analyze": |-
-  Analyzes the codebase and returns a list of file operations
-  without applying them.
+"AbstractOperation.collect_intents": |-
+  Analyzes the codebase and returns a list of high-level intents
+  without planning execution.
