feat: implement 'stitcher cov' for documentation coverage reporting
Introduces a new 'cov' command that provides a file-level coverage report of documentation stored in .stitcher.yaml files, inspired by pytest-cov.

Core improvements:
- spec: Enhanced ModuleDef with 'get_public_documentable_fqns' and refined 'is_documentable' logic to focus strictly on public APIs.
- application: Created CoverageRunner that aggregates documentation stats across scanned modules.
- cli: Added 'cov' subcommand with professional, dynamically-aligned tabular output.
- i18n: Added English and Chinese help strings for the new command.
- tests: Added comprehensive integration tests covering various coverage scenarios and UI alignment.

This feature allows teams to quantify documentation health and identify missing documentation in a standardized way.

s

--- a/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
+++ b/packages/stitcher-spec/src/stitcher/spec/models.stitcher.yaml
@@ -88,6 +88,8 @@
   A list of functions defined at the module level.
 "ModuleDef.get_all_fqns": |-
   返回模块中所有可文档化实体的 FQN 列表。
+"ModuleDef.get_public_documentable_fqns": |-
+  Returns a set of all public FQNs that should have documentation.
 "ModuleDef.get_undocumented_public_keys": |-
   Returns a list of public keys (FQNs) that do not have a docstring.
 "ModuleDef.imports": |-
