feat(spec/adapter): implement style-aware docstring serializers
Introduces a polymorphic serialization layer to support Google and NumPy
styled YAML storage, aligning with the "YAML as UI" philosophy.

Key changes:
- Added `SectionKind` enum and `DocstringSerializerProtocol` to the spec.
- Implemented `GoogleSerializer` and `NumpySerializer` in the Python adapter.
- Implemented a standard encoding strategy for items: `(type) description`.
- Ensured absolute preservation of `Addon.*` keys across all serializers.
- Updated factories to provide style-specific serializers.

This enables the system to present YAML structures that feel natural to
developers depending on their configured docstring style (e.g., using 'Args'
vs 'Parameters'), significantly improving DX for manual documentation edits.

s

s

--- a/packages/stitcher-application/src/stitcher/app/services/differ.stitcher.yaml
+++ b/packages/stitcher-application/src/stitcher/app/services/differ.stitcher.yaml
@@ -1,4 +1,4 @@
 "Differ": |-
-  Service responsible for calculating and rendering differences.
+  Service responsible for generating human-readable differences between text or objects.
 "Differ.generate_text_diff": |-
-  Generates a standard unified diff between two strings.
+  Generates a unified diff string between two text blocks.
