[WIP] refactor(arch): 将重构逻辑从 CLI 移至 Application 层
X-Quipu-Output-Tree: 5b1cefdd66b543bc6c8fa890d213928befb1d948

--- a/snapshot/packages/stitcher-application/pyproject.toml
+++ b/snapshot/packages/stitcher-application/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "stitcher-common",
     "stitcher-config",
     "stitcher-python-adapter",
+    "stitcher-refactor",
     "pyneedle",
 ]
 
