--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "pyneedle-spec",
     "stitcher-cli",
     "stitcher-application",
+    "stitcher-stubgen",
     "stitcher-test-utils",
     "stitcher-refactor",
 ]
@@ -36,6 +37,7 @@ stitcher-config = { workspace = true }
 stitcher-application = { workspace = true }
 stitcher-python-adapter = { workspace = true }
 stitcher-cli = { workspace = true }
+stitcher-stubgen = { workspace = true }
 stitcher-test-utils = { workspace = true }
 stitcher-refactor = { workspace = true }
 
@@ -56,7 +58,8 @@ pythonpath = [
     "packages/pyneedle-runtime/src",
     "packages/pyneedle/src",
     "packages/stitcher-test-utils/src",
-    "packages/stitcher-refactor/src"
+    "packages/stitcher-refactor/src",
+    "packages/stitcher-stubgen/src"
 ]
 
 [tool.stitcher.targets.stitcher]
@@ -101,4 +104,5 @@ extraPaths = [
     "packages/stitcher-stubs/src",
     "packages/needle-stubs/src",
     "packages/stitcher-refactor/src",
+    "packages/stitcher-stubgen/src",
 ]
