style: ruff and stitcher Capture: M core.json, M refactor.json, M signature_manager.json ... and 5 more files
X-Quipu-Output-Tree: 5e9a6c3dc814404d27a9b82f4f27ac2599364640

--- a/snapshot/packages/stitcher-refactor/src/stitcher/refactor/workspace.stitcher.yaml
+++ b/snapshot/packages/stitcher-refactor/src/stitcher/refactor/workspace.stitcher.yaml
@@ -1,5 +1,7 @@
+"Workspace._build_from_config": |-
+  Builds workspace view from a StitcherConfig object.
 "Workspace._discover_packages": |-
-  Scans for all pyproject.toml files to build the package map.
+  (Default) Builds workspace view by scanning for pyproject.toml files.
 "Workspace._find_code_dirs": |-
   Finds potential source directories: src/, tests/, and the package root.
 "Workspace._get_top_level_importables": |-
