refactor(analysis): establish shared python analysis layer
- Created 'stitcher-python-analysis' package to house common CST/AST logic.
- Migrated LibCST visitors (IR building) and transformers (strip/inject) from adapter.
- Migrated Griffe-based parsing logic to the analysis layer.
- Centralized symbol usage scanning and renaming components from refactor engine.
- Updated 'stitcher-python-adapter' and 'stitcher-refactor' to depend on the new analysis package.
- Relocated and fixed unit tests to align with the new package structure.
- Synchronized .stitcher.yaml documentation assets across all affected modules.

This completes Stage 3 (Semantic Integration) of the refactoring roadmap, resolving DRY violations and providing a unified foundation for Python code analysis.

s

--- a/packages/stitcher-python-adapter/src/stitcher/adapter/python/__init__.stitcher.yaml
+++ b/packages/stitcher-python-adapter/src/stitcher/adapter/python/__init__.stitcher.yaml
@@ -1,9 +1,6 @@
-"PythonFingerprintStrategy": |-
-  Strategy for computing fingerprints for Python entities.
-  Uses a composite approach (StructureHasher + SignatureTextHasher).
 "PythonParser": |-
-  Adapter for parsing Python source code into Stitcher IR.
-"PythonStubGenerator": |-
-  Adapter for generating Python type stubs (.pyi).
+  Adapter entry point for Python parsing. Delegates to the Analysis layer's CST visitors.
 "PythonTransformer": |-
-  Adapter for transforming Python source code (strip/inject docstrings).
+  Adapter entry point for Python code transformation (strip/inject). Delegates to Analysis layer.
+"PythonFingerprintStrategy": |-
+  Computes stability fingerprints for Python entities.
