--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dev = [
 exclude = ["migrations*"]
 
 [tool.uv.workspace]
-members = ["packages/*", "packages/stitcher-test-utils"]
+members = ["packages/*", "packages/stitcher-test-utils", "packages/stitcher-python-analysis"]
 
 [tool.uv.sources]
 pyneedle = { workspace = true }
@@ -43,6 +43,7 @@ stitcher-cli = { workspace = true }
 stitcher-stubgen = { workspace = true }
 stitcher-test-utils = { workspace = true }
 stitcher-refactor = { workspace = true }
+stitcher-python-analysis = { workspace = true }
 
 [tool.pytest.ini_options]
 addopts = "-ra --cov=stitcher --cov=needle --cov-report=term-missing"
@@ -62,7 +63,8 @@ pythonpath = [
     "packages/pyneedle/src",
     "packages/stitcher-test-utils/src",
     "packages/stitcher-refactor/src",
-    "packages/stitcher-stubgen/src"
+    "packages/stitcher-stubgen/src",
+    "packages/stitcher-python-analysis/src"
 ]
 
 [tool.stitcher.targets.stitcher]
@@ -108,4 +110,5 @@ extraPaths = [
     "packages/needle-stubs/src",
     "packages/stitcher-refactor/src",
     "packages/stitcher-stubgen/src",
+    "packages/stitcher-python-analysis/src",
 ]
