[WIP] feat(adapter): 实现 PythonAdapter 以支持 Stitcher Index 协议
X-Quipu-Output-Tree: 08f6f7afd152acb39d236b74efa94eea251c8bda

--- a/snapshot/packages/stitcher-python-adapter/pyproject.toml
+++ b/snapshot/packages/stitcher-python-adapter/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "stitcher-python-analysis",
     "stitcher-spec",
     "stitcher-common",
+    "stitcher-index",
     "libcst",
     "griffe",
 ]
@@ -22,3 +23,4 @@ packages = ["src/stitcher"]
 stitcher-python-analysis = { workspace = true }
 stitcher-spec = { workspace = true }
 stitcher-common = { workspace = true }
+stitcher-index = { workspace = true }
