style: ruff and stitcher Capture: M core.json, A index.json, A index.json ... and 23 more files
X-Quipu-Output-Tree: 05112a8209b7e892766a06bc21d6f92f15b014c1

--- a/snapshot/packages/stitcher-index/src/stitcher/index/store.stitcher.yaml
+++ b/snapshot/packages/stitcher-index/src/stitcher/index/store.stitcher.yaml
@@ -1,3 +1,7 @@
+"IndexStore.delete_file": |-
+  Remove a file and its associated symbols/references (via cascade).
+"IndexStore.get_all_files_metadata": |-
+  Fetch all file records to build an in-memory cache for the scanner.
 "IndexStore.sync_file": |-
   Registers a file in the index.
   Returns: (file_id, is_changed)
