[WIP] fix: 升级测试基础设施以适配 IndexStore
X-Quipu-Output-Tree: 2fc1b998b3602213b77a928adfb496c49c04c9dc

--- a/snapshot/packages/stitcher-test-utils/pyproject.toml
+++ b/snapshot/packages/stitcher-test-utils/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "tomli-w",
     "stitcher-application",
     "stitcher-python-adapter",
+    "stitcher-index",
 ]
 
 [tool.hatch.build.targets.wheel]
