[WIP] feat(arch): 全局迁移 Workspace 的依赖和导入
X-Quipu-Output-Tree: ac11f8f272c35fd5e7cd644568d0d1c0e8f5cdc0

--- a/snapshot/packages/stitcher-application/pyproject.toml
+++ b/snapshot/packages/stitcher-application/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "stitcher-config",
     "stitcher-python-adapter",
     "stitcher-stubgen",
-    "stitcher-refactor",
+    "stitcher-workspace",
     "stitcher-index",
     "pyneedle",
 ]
@@ -27,6 +27,6 @@ stitcher-common = { workspace = true }
 stitcher-config = { workspace = true }
 stitcher-python-adapter = { workspace = true }
 stitcher-stubgen = { workspace = true }
-stitcher-refactor = { workspace = true }
+stitcher-workspace = { workspace = true }
 stitcher-index = { workspace = true }
 pyneedle = { workspace = true }
