--- a/snapshot/packages/stitcher-test-utils/pyproject.toml
+++ b/snapshot/packages/stitcher-test-utils/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "stitcher-application",
     "stitcher-python-adapter",
     "stitcher-index",
+    "stitcher-workspace",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -23,3 +24,4 @@ packages = ["src/stitcher"]
 pyneedle = { workspace = true }
 stitcher-application = { workspace = true }
 stitcher-python-adapter = { workspace = true }
+stitcher-workspace = { workspace = true }
