[WIP] refactor: Centralize test fixtures into a discoverable plugin
X-Quipu-Output-Tree: e24434fa00572f4747d4d73efdab4f4749fced3f

--- a/snapshot/packages/stitcher-test-utils/pyproject.toml
+++ b/snapshot/packages/stitcher-test-utils/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "stitcher-workspace",
 ]
 
+[project.entry-points."pytest11"]
+stitcher = "stitcher.test_utils.fixtures"
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/stitcher"]
 
