refactor(perf): implement hot-set filtering for reformat_all
This optimization addresses the "Reformat Tax" (218ms/46% of check duration) by making the reformatting phase incremental:

1. Indexer Upgrade: `FileIndexer.index_files` and `IndexRunner.run_build` now return a set of `modified_paths` alongside the status.
2. Targeted Reformatting: `StitcherApp.run_check` now uses the indexing results to filter modules. Only modules that were actually added or updated in the current cycle (the "hot set") are passed to `reformat_all`.
3. Impact: In a "no-change" scenario, `reformat_all` overhead drops from ~218ms to near 0ms, as expensive YAML serialization is completely bypassed for stable files.

s

--- a/packages/stitcher-index/src/stitcher/index/db.stitcher.yaml
+++ b/packages/stitcher-index/src/stitcher/index/db.stitcher.yaml
@@ -4,3 +4,6 @@
   Closes connection at the end.
 "DatabaseManager.initialize": |-
   Loads schema.sql and initializes the database tables.
+"DatabaseManager.session": |-
+  Starts a persistent database session.
+  Calls to get_connection() within this context will reuse the same connection.
