--- a/snapshot/packages/stitcher-test-utils/pyproject.toml
+++ b/snapshot/packages/stitcher-test-utils/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "stitcher-python-adapter",
     "stitcher-index",
     "stitcher-workspace",
+    "stitcher-common",
+    "stitcher-spec",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -25,3 +27,6 @@ pyneedle = { workspace = true }
 stitcher-application = { workspace = true }
 stitcher-python-adapter = { workspace = true }
 stitcher-workspace = { workspace = true }
+stitcher-index = { workspace = true }
+stitcher-common = { workspace = true }
+stitcher-spec = { workspace = true }
