Capture: M pyproject.toml, M uv.lock
X-Quipu-Output-Tree: b6e4c3cb5386237b2815c57c6864cca86e5ae1f1

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -24,6 +24,7 @@ dev = [
     "stitcher-index",
     "stitcher-workspace",
     "stitcher-lang-python",
+    "stitcher-lang-sidecar",
 ]
 
 [tool.setuptools.packages.find]
@@ -50,6 +51,7 @@ stitcher-refactor = { workspace = true }
 stitcher-index = { workspace = true }
 stitcher-workspace = { workspace = true }
 stitcher-lang-python = { workspace = true }
+stitcher-lang-sidecar = { workspace = true }
 
 [tool.pytest.ini_options]
 addopts = "-ra --cov=stitcher --cov=needle --cov-report=term-missing"
