--- a/snapshot/packages/stitcher-analysis/pyproject.toml
+++ b/snapshot/packages/stitcher-analysis/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "stitcher-common",
     "stitcher-index",
     "stitcher-config",
+    "pyneedle-pointer",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -22,3 +23,4 @@ stitcher-spec = { workspace = true }
 stitcher-common = { workspace = true }
 stitcher-index = { workspace = true }
 stitcher-config = { workspace = true }
+pyneedle-pointer = { workspace = true }
