feat(arch): introduce stitcher-analysis and upgrade InteractionContext
This commit establishes the physical and logical foundation for the new analysis engine and unifies the system's semantic language.

1.  Created 'stitcher-analysis' package:
    - Implemented a rule-based consistency engine.
    - Extracted check logic from the app layer into discrete, testable Rules (Signature, Content, Existence, Untracked).
    - Introduced 'Violation' and 'FileCheckResult' schemas using SemanticPointers as error codes.
2.  Upgraded 'stitcher-spec':
    - Modified 'InteractionContext' to use 'SemanticPointer' (violation_type) instead of 'ConflictType' enum.
    - Added 'pyneedle-pointer' dependency to the spec package.
3.  Monorepo integration:
    - Updated root 'pyproject.toml' to include the new analysis package in workspace, dev dependencies, and tool configurations (pytest, pyright, stitcher).

Note: This is a breaking change that requires subsequent refactoring of 'stitcher-application' and 'stitcher-cli' to adapt to the new InteractionContext structure.

--- a/packages/stitcher-spec/pyproject.toml
+++ b/packages/stitcher-spec/pyproject.toml
@@ -7,7 +7,12 @@ name = "stitcher-spec"
 version = "0.1.0"
 description = "Intermediate Representation (IR) models for Stitcher."
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "pyneedle-pointer",
+]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/stitcher"]
+
+[tool.uv.sources]
+pyneedle-pointer = { workspace = true }
