--- a/packages/stitcher-application/pyproject.toml
+++ b/packages/stitcher-application/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "stitcher-stubgen",
     "stitcher-workspace",
     "stitcher-index",
+    "stitcher-analysis",
     "pyneedle",
 ]
 
