[WIP] chore: 更新 SemanticGraph 迁移后的包依赖关系
X-Quipu-Output-Tree: c0f0d9f5fdb91412ad9a24abe443a62911751c1b

--- a/snapshot/packages/stitcher-analysis/pyproject.toml
+++ b/snapshot/packages/stitcher-analysis/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "stitcher-common",
     "stitcher-index",
     "stitcher-config",
+    "stitcher-workspace",
     "pyneedle-pointer",
+    "griffe",
 ]
 
 [tool.hatch.build.targets.wheel]
@@ -24,3 +26,4 @@ stitcher-common = { workspace = true }
 stitcher-index = { workspace = true }
 stitcher-config = { workspace = true }
 pyneedle-pointer = { workspace = true }
+stitcher-workspace = { workspace = true }
