--- a/snapshot/packages/stitcher-lang-sidecar/pyproject.toml
+++ b/snapshot/packages/stitcher-lang-sidecar/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "stitcher-spec",
     "stitcher-common",
+    "stitcher-lang-python",
     "ruamel.yaml>=0.17.0",
 ]
 
@@ -19,3 +20,4 @@ packages = ["src/stitcher"]
 [tool.uv.sources]
 stitcher-spec = { workspace = true }
 stitcher-common = { workspace = true }
+stitcher-lang-python = { workspace = true }
