[WIP] chore: 为重构引擎添加诊断日志
X-Quipu-Output-Tree: 85cc6e32925892d63b9ed5b685b51335a6e73486

--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -56,7 +56,9 @@ stitcher-lang-sidecar = { workspace = true }
 stitcher-analysis = { workspace = true }
 
 [tool.pytest.ini_options]
-addopts = "-ra --cov=stitcher --cov=needle --cov-report=term-missing"
+addopts = "-ra -s --cov=stitcher --cov=needle --cov-report=term-missing"
+log_cli = "true"
+log_cli_level = "DEBUG"
 testpaths = ["tests", "packages"]
 norecursedirs = ["tests/fixtures"]
 pythonpath = [
