--- a/snapshot/pyproject.toml
+++ b/snapshot/pyproject.toml
@@ -58,7 +58,7 @@ stitcher-analysis = { workspace = true }
 [tool.pytest.ini_options]
 addopts = "-ra -s --cov=stitcher --cov=needle --cov-report=term-missing"
 log_cli = "true"
-log_cli_level = "DEBUG"
+# log_cli_level = "DEBUG"
 testpaths = ["tests", "packages"]
 norecursedirs = ["tests/fixtures"]
 pythonpath = [
