[WIP] feat: Introduce graph computation infrastructure to stitcher-analysis
X-Quipu-Output-Tree: 2781dba1f7230c16a535e08bea4625cb5b4c97fe

--- a/snapshot/packages/stitcher-analysis/pyproject.toml
+++ b/snapshot/packages/stitcher-analysis/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "stitcher-workspace",
     "pyneedle-pointer",
     "griffe",
+    "networkx",
 ]
 
 [tool.hatch.build.targets.wheel]
