[WIP] fix: Correct remaining stitcher.config imports
X-Quipu-Output-Tree: ef99e4b32e8e56cd12a3c1e8d4096315d16b7933

--- a/snapshot/packages/stitcher-workspace/pyproject.toml
+++ b/snapshot/packages/stitcher-workspace/pyproject.toml
@@ -15,4 +15,4 @@ dependencies = [
 packages = ["src/stitcher"]
 
 [tool.uv.sources]
-stitcher-config = { workspace = true }
+stitcher-common = { workspace = true }
