--- a/packages/stitcher-application/pyproject.toml
+++ b/packages/stitcher-application/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "stitcher-spec",
     "stitcher-common",
     "stitcher-lang-python",
+    "stitcher-lang-sidecar",
     "stitcher-stubgen",
     "stitcher-workspace",
     "stitcher-index",
