ruff and stitcher Capture: M conftest.py, M core.py, M core.stitcher.yaml ... and 12 more files
X-Quipu-Output-Tree: f2148af8709b3cb3341a30b75bb79e7fe3d621d8

--- a/snapshot/packages/stitcher-application/src/stitcher/app/core.stitcher.yaml
+++ b/snapshot/packages/stitcher-application/src/stitcher/app/core.stitcher.yaml
@@ -16,9 +16,8 @@
 
   This includes scanning source files, processing plugins, and generating .pyi files.
 "StitcherApp.run_init": |-
-  Initialize Stitcher for a project by creating the first batch of .stitcher.yaml files.
-
-  This command scans the codebase and extracts existing docstrings to seed the documentation store.
+  Alias for 'pump --reconcile'.
+  Initializes the project by syncing source docs to YAML, respecting existing YAML content.
 "StitcherApp.run_inject": |-
   Inject documentation from .stitcher.yaml files back into the source code as docstrings.
 
